[gd_scene load_steps=2 format=3 uid="uid://cowaifwgd6o7p"]

[ext_resource type="Script" uid="uid://dfnw1cr6edbj0" path="res://script/final.gd" id="1_dxk2o"]

[node name="Final" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_dxk2o")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.629978, 0.788383, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -113.0
offset_right = 153.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "VOCÃŠ PERDEU"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tempo vivo:"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Moedas:"

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "TENTAR NOVAMENTE"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
